--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ But it must have the following features:
 </head>
 <body>
   <link rel="stylesheet" href="./style.css">
-  <img src="../6.4 Motivation Meme Project/assets/62fea815ec781d001868c1b4.webp" alt="">
+  <img src="./assets/62fea815ec781d001868c1b4.webp" alt="">
   <h1>WTF Bro!</h1>
   
   
